--- a/TransparentWindow/AllowsTransparency.xaml
+++ b/TransparentWindow/AllowsTransparency.xaml
@@ -1,5 +1,5 @@
 ﻿<Window
-    x:Class="TransparentWindow.MainWindow"
+    x:Class="TransparentWindow.AllowsTransparency"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,7 @@
     xmlns:local="clr-namespace:TransparentWindow"
     mc:Ignorable="d" d:DesignHeight="500" d:DesignWidth="500"
     Width="1017" Height="629" WindowStartupLocation="CenterScreen"
-    Background="Transparent" WindowStyle="SingleBorderWindow"
+    Background="Transparent" WindowStyle="None" AllowsTransparency="True"
     WindowState="Normal" ResizeMode="CanMinimize">
     <WindowChrome.WindowChrome>
         <WindowChrome CaptionHeight="0" UseAeroCaptionButtons="False" GlassFrameThickness="-1" NonClientFrameEdges="None" ResizeBorderThickness="0" CornerRadius="0"/>
